--- a/app/src/main/res/layout/fragment_2.xml
+++ b/app/src/main/res/layout/fragment_2.xml
@@ -16,7 +16,7 @@
         android:text="@string/zero" />
 
     <Button
-        android:id="@+id/button_plus"
+        android:id="@+id/button_increase"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="2"
